@@ -128,6 +128,13 @@
         specific as <literal>Left Rack, 2nd Shelf</literal>.
         </para></listitem>
       </varlistentry>
+
+      <varlistentry>
+        <term><varname>KERNEL_INSTALL_MACHINE_ID=</varname></term>
+
+        <listitem><para>Specifies the machine ID <command>kernel-install</command> should use. The value must
+        be a valid machine ID (32 hexadecimal characters).</para></listitem>
+      </varlistentry>
     </variablelist>
   </refsect1>
 
